tambah youtube di footer

--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
                             <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/merakiciptarasa?igsh=YXlwbWttcTVrdm5y"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://api.whatsapp.com/send/?phone=6287773379369&text=Terima+kasih+telah+menghubungi+Meraki+Cipta+Rasa%2C+Mari+saya+bantu%21&type=phone_number&app_absent=0"><i class="fab fa-whatsapp"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://www.tiktok.com/@merakiciptarasa?_t=8kfo7TnZ1Wb&_r=1"><i class="fa-brands fa-tiktok"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://youtube.com/@merakiciptarasa?si=qiTrRYiRn02IbZ8y"><i class="fab fa-youtube"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
