merek dan deks merek

--- a/merek.html
+++ b/merek.html
@@ -71,7 +71,7 @@
                         <div class="col-12 text-center">
                             <h1 class="text-white animated slideInDown">Merek & Product</h1>
                             <hr class="bg-white mx-auto mt-0" style="width: 90px;">
-                            <h4 class="text-white animated slideInDown">Kami berupaya menciptakan produk makanan yang berkualitas tinggi. Diolah dengan perpaduan bahan segar dan rempah pilihan untuk memberikan rasa yang autentik dan lezat. Meraki Cipta Rasa menawarkan kemudahan, kualitas, dan  dalam setiap sajian.</h4>
+                            <p class="text-white animated slideInDown mb-4">Kami berupaya menciptakan produk makanan yang berkualitas tinggi. Diolah dengan perpaduan bahan segar dan rempah pilihan untuk memberikan rasa yang autentik dan lezat. Meraki Cipta Rasa menawarkan kemudahan, kualitas, dan  dalam setiap sajian.</P>
                         </div>
                     </div>
                 </div>
@@ -92,13 +92,12 @@
                         <div class="rounded overflow-hidden">
                             <div class="position-relative overflow-hidden">
                                 <img class="img-fluid w-100" src="img/wizz_sausage.png" alt="">
-                                <div class="portfolio-overlay">
-                                    <a class="btn btn-square btn-outline-light mx-1" href="img/portfolio-1.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                                    <a class="btn btn-square btn-outline-light mx-1" href="deks-merek-wizzsausage.html"><i class="fa fa-link"></i></a>
-                                </div>
+                                <a href="deks-merek-wizzsausage.html">
+                                    <div class="portfolio-overlay"></div>
+                                </a>
+                                
                             </div>
                             <div class="bg-light p-4">
-                                <p class="text-primary fw-medium mb-2">UI / UX Design</p>
                                 <h5 class="lh-base mb-0">Wizz Sausage</a>
                             </div>
                         </div>
@@ -113,7 +112,6 @@
                                 </div>
                             </div>
                             <div class="bg-light p-4">
-                                <p class="text-primary fw-medium mb-2">UI / UX Design</p>
                                 <h5 class="lh-base mb-0">Wizz Bites</a>
                             </div>
                         </div>
@@ -128,7 +126,6 @@
                                 </div>
                             </div>
                             <div class="bg-light p-4">
-                                <p class="text-primary fw-medium mb-2">UI / UX Design</p>
                                 <h5 class="lh-base mb-0">Wizz Food</a>
                             </div>
                         </div>
@@ -143,7 +140,6 @@
                                 </div>
                             </div>
                             <div class="bg-light p-4">
-                                <p class="text-primary fw-medium mb-2">UI / UX Design</p>
                                 <h5 class="lh-base mb-0">Pondok Cabe</a>
                             </div>
                         </div>
