benerin active hover

--- a/deks-merek-wizzsausage.html
+++ b/deks-merek-wizzsausage.html
@@ -74,7 +74,7 @@
                             <nav caria-label="breadcrumb">
                                  <ol class="breadcrumb justify-content-center">
                                     <li class="breadcrumb-item"><a class="text-white" href="merek.html">Merek</a></li>
-                                    <li class="breadcrumb-item text-white active" aria-current="page">Wizz Sausage</li>
+                                    <li class="breadcrumb-item text-white active"><a class="text-white" href="deks-merek-wizzsausage.html">Wizz Sausage</li></a>
                                 </ol>
                             </nav>
                             <p class="text-white pb-3 animated slideInDown">Deksripsi singkat merek</p>
