--- a/merek.html
+++ b/merek.html
@@ -55,9 +55,9 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav mx-auto py-0">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
+                            <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="company.html" class="nav-item nav-link">Company</a>
-                            <a href="merek.html" class="nav-item nav-link">Merek</a>
+                            <a href="merek.html" class="nav-item nav-link active">Merek</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                     </div>
