--- a/company.html
+++ b/company.html
@@ -55,9 +55,9 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav mx-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="company.html" class="nav-item nav-link">Company</a>
+                        <a href="company.html" class="nav-item nav-link active">Company</a>
                         <a href="merek.html" class="nav-item nav-link">Merek</a>
-                        <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <a href="" class="btn rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Get Started</a>
                 </div>
