--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 <div class="row g-4">
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="service-item d-flex flex-column text-center rounded">
-                            <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-hotdog fa-2x"></i>
+                            <div class="position-relative overflow-hidden">
+                                <img class="img-fluid w-100" src="img/wizz_sausage.png" alt="">
                             </div>
                             <h5 class="mb-3">Wizz Sausage</h5>
                             <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
