--- a/index.html
+++ b/index.html
@@ -112,42 +112,43 @@
                                 <img class="img-fluid w-100" src="img/wizz_sausage.png" alt="">
                             </div>
                             <h5 class="mb-3">Wizz Sausage</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">Deksripsi singkat merek</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="service-item d-flex flex-column text-center rounded">
-                            <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-drumstick-bite fa-2x"></i>
+                            <div class="position-relative overflow-hidden">
+                                <img class="img-fluid w-100" src="img/wizz_bite.png" alt="">
                             </div>
-                            <h5 class="mb-3">Wizz Bites</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <h5 class="mb-3">Wizz Bite</h5>
+                            <p class="m-0">Deksripsi singkat merek</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="service-item d-flex flex-column text-center rounded">
-                            <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-bacon fa-2x"></i>
+                            <div class="position-relative overflow-hidden">
+                                <img class="img-fluid w-100" src="img/wizz_food.png" alt="">
                             </div>
                             <h5 class="mb-3">Wizz Food</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">Deksripsi singkat merek</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="service-item d-flex flex-column text-center rounded">
-                            <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-pepper-hot fa-2x"></i>
+                            <div class="position-relative overflow-hidden">
+                                <img class="img-fluid w-100" src="img/wizz_sausage.png" alt="">
                             </div>
                             <h5 class="mb-3">Pondok Cabe</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">Deksripsi singkat merek</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
+            
         </div>
         <!-- Service End -->
        <!-- Projects Start -->
